--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: My portfolio
+title: Outrageous
 author: Hangsia
 email: honghangsia@koompi.org
 description: > # this means to ignore newlines until "baseurl:"
-        Hello fellow friend. I thank you for visiting my page. This site serve as my portfolio website.
+        Too fast to live, Too young to die
 
 # social links
 twitter_username: hangsiahong # DO NOT include the @ character, or else the build will fail!
