--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Outrageous
+title: Home
 author: Hangsia
 email: honghangsia@koompi.org
 description: > # this means to ignore newlines until "baseurl:"
